welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
if (surBiscuit==false) {
	avance();
}else{
	prendBiscuit();recule()
}